--- a/public/index.html
+++ b/public/index.html
@@ -362,7 +362,7 @@
         <article class="contact-btn">
           <button class="white-circle">
             <!-- <a class="play-btn">THAT'S ALL !</a> -->
-            <a href="mailto:danneytrieuwork@gmail.com"><Table>CONTACT ME</Table></a>
+            <a href="mailto:saiyakkshit2001@gmail.com"><Table>CONTACT ME</Table></a>
           </button>
           <button class="yellow-circle " data-scroll data-scroll-direction="horizontal" data-scroll-speed="5">            
           </button>
@@ -371,8 +371,8 @@
         <article class="social" >
           <!-- <button class="resume-btn"><a href="https://docs.google.com/document/d/1JZe-HMEtCslstih8dLTyoy0qGetlaqif/edit?usp=share_link&ouid=114733452238812246917&rtpof=true&sd=true" target="_blank">RESUME</a></button> -->
           <aside class="social-btns">
-            <a class="icon-github " href="https://github.com/Danneytrieu" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/danneytrieu" target="_blank"><span class="iconify" data-icon="entypo-social:linkedin-with-circle" style="color: black;" data-width="32"></span></a>
+            <a class="icon-github " href="https://github.com/saiyakkshit" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/yakkshit" target="_blank"><span class="iconify" data-icon="entypo-social:linkedin-with-circle" style="color: black;" data-width="32"></span></a>
             <!-- <a href="https://www.youtube.com/channel/UCDk-k_VufFvWwc_2SghRHIg" target="_blank"><span class="iconify" data-icon="entypo-social:youtube-with-circle" style="color: black;" data-width="33"></span></a> -->
             <!-- <a href="https://www.facebook.com/danney.trieu" target="_blank"><span class="iconify" data-icon="akar-icons:facebook-fill" style="color: black;" data-width="30"></span></a> -->
           </aside>
