--- a/index.html
+++ b/index.html
@@ -369,12 +369,12 @@
         </article>
         <!-- Social & resume -->
         <article class="social" >
-          <!-- <button class="resume-btn"><a href="https://docs.google.com/document/d/1JZe-HMEtCslstih8dLTyoy0qGetlaqif/edit?usp=share_link&ouid=114733452238812246917&rtpof=true&sd=true" target="_blank">RESUME</a></button> -->
+          <button class="resume-btn"><a href="https://docs.google.com/document/d/1JZe-HMEtCslstih8dLTyoy0qGetlaqif/edit?usp=share_link&ouid=114733452238812246917&rtpof=true&sd=true" target="_blank">RESUME</a></button>
           <aside class="social-btns">
-            <a class="icon-github " href="https://github.com/Danneytrieu" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/danneytrieu" target="_blank"><span class="iconify" data-icon="entypo-social:linkedin-with-circle" style="color: black;" data-width="32"></span></a>
-            <!-- <a href="https://www.youtube.com/channel/UCDk-k_VufFvWwc_2SghRHIg" target="_blank"><span class="iconify" data-icon="entypo-social:youtube-with-circle" style="color: black;" data-width="33"></span></a> -->
-            <!-- <a href="https://www.facebook.com/danney.trieu" target="_blank"><span class="iconify" data-icon="akar-icons:facebook-fill" style="color: black;" data-width="30"></span></a> -->
+            <a class="icon-github " href="https://github.com/saiyakkshit" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/yakkshit" target="_blank"><span class="iconify" data-icon="entypo-social:linkedin-with-circle" style="color: black;" data-width="32"></span></a>
+            <a href="https://www.youtube.com/channel/cedzanime" target="_blank"><span class="iconify" data-icon="entypo-social:youtube-with-circle" style="color: black;" data-width="33"></span></a>
+            <a href="https://www.instagram.com/yakkshit" target="_blank"><span class="iconify" data-icon="akar-icons:facebook-fill" style="color: black;" data-width="30"></span></a>
           </aside>
           <div class="footer-line"></div>
         </article>
@@ -382,7 +382,7 @@
         <p class="credit" >Designed & Built by</p>
       </section>
       <section id="footer" data-scroll-section>
-        <p>DANNEY TRIEU © 2021</p>
+        <p>cedzlabs.com</p>
       </section>
     <!-- script -->
     <script src="./script.js"></script>
