--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
                 ></span>
               </div>
               <h2 class="intro-quote">
-                <a href="https://github.com/sabr007">🥶 Abu Bakr Rahman Shaik 😊</a>||
+                <a href="https://github.com/sabr007">Abu Bakr Rahman Shaik</a>||
                 <a href="https://yakkshit.cedzlabs.com">Yakkshit Reddy </a>||
                 <a href="https://yakkshit.cedzlabs.com">Dr. Valeria Garro</a> 
               </h2>
